# autonomous-validation-agent

./: .gitignore  CMakeLists.txt  README.md  RESULTS.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
cpp/include/: infotainment_sm.h
cpp/src/: bindings.cpp  infotainment_sm.cpp
python/: __init__.py  delta_debugger.py  fuzzer.py  invariant_checker.py  model_based_generator.py  server.py  state_renderer.py  transition_logger.py
static/: index.html
tests/: conftest.py  test_fuzz.py  test_integration.py  test_invariants_direct.py  test_unit.py  test_visual_regression.py
